# function-level-probabilistic-active-learning

./: .gitignore  .gitmodules  Dockerfile  README.md
active_bayesify/: requirements.txt
active_bayesify/bayesify/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
active_bayesify/bayesify/bayesify/: datahandler.py  pairwise.py
active_bayesify/bayesify/tests/unit/: pairwisetest.py
active_bayesify/data/brotli/: brotli_ml_cfg.csv  brotli_ml_cfg_summed_only_top_functions.csv  brotli_ml_cfg_without_window_10_value.csv  brotli_ml_cfg_without_window_20_value.csv
active_bayesify/data/lrzip/: lrzip_ml_cfg.csv  lrzip_ml_cfg_summed_only_top_functions.csv  lrzip_ml_cfg_with_unknown_function.csv  lrzip_ml_cfg_without_ram_2_value.csv  lrzip_ml_cfg_without_ram_6_value.csv
active_bayesify/data/x264/: x264_ml_cfg_summed_only_top_functions.csv
active_bayesify/final/: config.ini  evaluation.py  pipeline.py
active_bayesify/final/results/brotli/: active_learning_on_function_level_features_vif.csv  active_learning_on_function_level_results.csv  active_learning_on_function_level_with_brute_force_emc_chosen_configs.csv  (+29 more)
active_bayesify/tests/unit/: helper.py
active_bayesify/utils/dtos/: model_result.py
active_bayesify/utils/general/: config_parser.py  data_reader.py  logger.py
active_bayesify/utils/libraries/: distance_based_sampling_wrapper.py
active_bayesify/utils/models/: feature.py  function_models.py  p4_influences.py
active_bayesify/utils/pipeline/: data_handler.py  emc_sampler.py  standard_models.py
(+66 files in other folders)
